# solidity

./: CMakeLists.txt  Changelog.md
docs/: using-the-compiler.rst
libdevcore/: FixedHash.h
libsolc/: CMakeLists.txt  libsolc.cpp
libsolidity/analysis/: TypeChecker.cpp
libsolidity/codegen/: ABIFunctions.cpp  ABIFunctions.h  CompilerUtils.cpp  CompilerUtils.h  ContractCompiler.cpp  ExpressionCompiler.cpp
libsolidity/formal/: SMTChecker.cpp  SMTChecker.h  SMTLib2Interface.cpp  SolverInterface.h  Z3Interface.cpp
libsolidity/interface/: CompilerStack.cpp  CompilerStack.h  StandardCompiler.cpp
scripts/: test_emscripten.sh
scripts/bytecodecompare/: storebytecode.sh
scripts/travis-emscripten/: build_emscripten.sh
test/: ExecutionFramework.h
test/contracts/: Wallet.cpp
test/libsolidity/: ABIDecoderTests.cpp  SMTChecker.cpp
